chore: Add checkstyle plugin to validate codestyle
- add checkstyle rules
- add checkstyle plugin
- adjust existed code to codestyle rules

Closes: MODINVSTOR-1056